WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
257333
Follow-up fixes after
264515@main
https://bugs.webkit.org/show_bug.cgi?id=257333
Summary
Follow-up fixes after 264515@main
Michael Catanzaro
Reported
2023-05-25 09:57:26 PDT
Fix indentation error and also: /home/mcatanzaro/Projects/WebKit/Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:1576:71: error: cannot pass object of non-trivial type 'WeakPtr<MediaPlayer>' through variadic function; call will abort at runtime [-Wnon-pod-varargs] gst_structure_set(contextStructure, "player", G_TYPE_POINTER, m_player, nullptr); ^ 1 error generated.
Attachments
Add attachment
proposed patch, testcase, etc.
Michael Catanzaro
Comment 1
2023-05-25 09:58:28 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/14351
EWS
Comment 2
2023-05-25 11:14:27 PDT
Committed
264529@main
(ee059a1e6a73): <
https://commits.webkit.org/264529@main
> Reviewed commits have been landed. Closing PR #14351 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug