Unreviewed, fix GTK/WPE build warning and indentation issues after 264515@main https://bugs.webkit.org/show_bug.cgi?id=257333

* Source/WebCore/html/HTMLMediaElement.cpp:
* Source/WebCore/platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
(WebCore::MediaPlayerPrivateGStreamer::handleNeedContextMessage):

Canonical link: https://commits.webkit.org/264529@main